--- a/404.html
+++ b/404.html
@@ -80,10 +80,10 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.auxaxw3i.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CgfJ9EuQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Crlrhsnm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Dqg9A5OO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZbEYaIK.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Csux0LW6.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B0pddjpA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cj9c95v1.js">
 	</head>
 
@@ -91,15 +91,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1bqlme0 = {
+					__sveltekit_1ic26wv = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.auxaxw3i.js"),
-						import("/_app/immutable/entry/app.Csux0LW6.js")
+						import("/_app/immutable/entry/start.Crlrhsnm.js"),
+						import("/_app/immutable/entry/app.B0pddjpA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
