--- a/404.html
+++ b/404.html
@@ -80,26 +80,26 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.PGQqLOvp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/kAVU8yWF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CZbEYaIK.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DpVpYDcM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cj9c95v1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.EjcRsnx_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BwnltYHu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D09Fc-Xk.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D_ZNyUhF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/OpgvYbog.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_d5m9qq = {
+					__sveltekit_152twe4 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.PGQqLOvp.js"),
-						import("/_app/immutable/entry/app.DpVpYDcM.js")
+						import("/_app/immutable/entry/start.EjcRsnx_.js"),
+						import("/_app/immutable/entry/app.D_ZNyUhF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
