--- a/404.html
+++ b/404.html
@@ -80,26 +80,28 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.EjcRsnx_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BwnltYHu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D09Fc-Xk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D_ZNyUhF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/OpgvYbog.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Cwfh6S8j.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/EDGx4J6T.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BW5O_Kuy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BaNWsKEw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BvL4nW7w.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CHDbkL9n.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/TqRWhDz0.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_152twe4 = {
+					__sveltekit_1wwtpel = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.EjcRsnx_.js"),
-						import("/_app/immutable/entry/app.D_ZNyUhF.js")
+						import("/_app/immutable/entry/start.Cwfh6S8j.js"),
+						import("/_app/immutable/entry/app.BvL4nW7w.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
