--- a/teacher/index.html
+++ b/teacher/index.html
@@ -83,21 +83,21 @@
 		<link href="../_app/immutable/assets/0.BtlOPs0F.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Cwfh6S8j.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/EDGx4J6T.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.BB9FRGEM.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ChD84-X2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BvL4nW7w.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.-Yy_Hnlx.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/TqRWhDz0.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.CYjHp2n4.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.CTA8iB1c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/4LsEG6DZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CHqsCIdK.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DLlEpYLa.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BEwGYs8X.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DC21w5cU.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DHvudTSP.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/KFD0NVL7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/D8qS81Gx.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/B3L_KJu0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/XQtzLBlb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/QIL1J_iL.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Cf9o8it4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/IyBdFYj9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DKjgU9O5.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/5.J9EPCzLO.js">
@@ -109,15 +109,15 @@
 			
 			<script>
 				{
-					__sveltekit_1wwtpel = {
+					__sveltekit_rfjovy = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.Cwfh6S8j.js"),
-						import("../_app/immutable/entry/app.BvL4nW7w.js")
+						import("../_app/immutable/entry/start.BB9FRGEM.js"),
+						import("../_app/immutable/entry/app.-Yy_Hnlx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
