--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BB9FRGEM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ChD84-X2.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Cq8tPzC0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DyuXkW_b.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.-Yy_Hnlx.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.-bz89ZeM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/TqRWhDz0.js">
 	</head>
@@ -93,15 +93,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_rfjovy = {
+					__sveltekit_17y44rh = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BB9FRGEM.js"),
-						import("/_app/immutable/entry/app.-Yy_Hnlx.js")
+						import("/_app/immutable/entry/start.Cq8tPzC0.js"),
+						import("/_app/immutable/entry/app.-bz89ZeM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
