--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bao66iWh.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DA1If0MN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CnHgGPhW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/pBaRA2Jv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.GfnFHA6F.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Dz03slPT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/TqRWhDz0.js">
 	</head>
@@ -93,15 +93,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1xtmqs3 = {
+					__sveltekit_9t8ql = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bao66iWh.js"),
-						import("/_app/immutable/entry/app.GfnFHA6F.js")
+						import("/_app/immutable/entry/start.CnHgGPhW.js"),
+						import("/_app/immutable/entry/app.Dz03slPT.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
