--- a/old/index.html
+++ b/old/index.html
@@ -83,25 +83,25 @@
 		<link href="../_app/immutable/assets/0.CqtXg5Up.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Bdks_JWK.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CPQ8TJkT.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0b6s8mol.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BdZWm7LF.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.xZNbRam8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.dmkhP8Sw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/TqRWhDz0.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DtRZaJ7Z.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.DrS4dgc6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/4LsEG6DZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Cxamd97f.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/3bo87hRT.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BEwGYs8X.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/gcpaWc-f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BtlQYMdy.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CB-bAJXd.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CEYKMo2K.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/68dNWJPb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BYtCotvF.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DEjnHSNc.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/YX_NTPze.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/IyBdFYj9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DKjgU9O5.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.BOXi9e7h.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CD--N0T8.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.Dw_a4_Bf.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DsLYJ0bM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/C9NAXuyt.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BsZPXoma.js">
 	</head>
@@ -119,15 +119,15 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1qsbvlg = {
+					__sveltekit_1xoj9km = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.Bdks_JWK.js"),
-						import("../_app/immutable/entry/app.xZNbRam8.js")
+						import("../_app/immutable/entry/start.0b6s8mol.js"),
+						import("../_app/immutable/entry/app.dmkhP8Sw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
