--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bdks_JWK.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CPQ8TJkT.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.0b6s8mol.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BdZWm7LF.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.xZNbRam8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.dmkhP8Sw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/TqRWhDz0.js">
 	</head>
@@ -93,15 +93,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1qsbvlg = {
+					__sveltekit_1xoj9km = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bdks_JWK.js"),
-						import("/_app/immutable/entry/app.xZNbRam8.js")
+						import("/_app/immutable/entry/start.0b6s8mol.js"),
+						import("/_app/immutable/entry/app.dmkhP8Sw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
