--- a/teacher/index.html
+++ b/teacher/index.html
@@ -83,21 +83,21 @@
 		<link href="../_app/immutable/assets/0.CqtXg5Up.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.0b6s8mol.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BdZWm7LF.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bugyh0OM.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Dvhjngru.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.dmkhP8Sw.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CU6cDemo.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/TqRWhDz0.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DrS4dgc6.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.Dy-BcoOp.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/4LsEG6DZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/3bo87hRT.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DQgDaMQz.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BEwGYs8X.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/68dNWJPb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BYtCotvF.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DEjnHSNc.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/YX_NTPze.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/pQW2vC23.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Bfae78X8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CNRNZatQ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CFB7ihx9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/IyBdFYj9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DKjgU9O5.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/5.J9EPCzLO.js">
@@ -109,15 +109,15 @@
 			
 			<script>
 				{
-					__sveltekit_1xoj9km = {
+					__sveltekit_122tlng = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.0b6s8mol.js"),
-						import("../_app/immutable/entry/app.dmkhP8Sw.js")
+						import("../_app/immutable/entry/start.bugyh0OM.js"),
+						import("../_app/immutable/entry/app.CU6cDemo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
