--- a/teacher/index.html
+++ b/teacher/index.html
@@ -83,21 +83,21 @@
 		<link href="../_app/immutable/assets/0.CqtXg5Up.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.bugyh0OM.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Dvhjngru.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CcPr2wIH.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CWrYsVGY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.CU6cDemo.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DnvmBgxm.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/TqRWhDz0.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.Dy-BcoOp.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.cMnsqn1d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/4LsEG6DZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DQgDaMQz.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Ch85-Xrm.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BEwGYs8X.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/pQW2vC23.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Bfae78X8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CNRNZatQ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CFB7ihx9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DYjIsmCh.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CfSIxBOG.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BviluwKP.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/D-mdl4RJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/IyBdFYj9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DKjgU9O5.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/5.J9EPCzLO.js">
@@ -109,15 +109,15 @@
 			
 			<script>
 				{
-					__sveltekit_122tlng = {
+					__sveltekit_a16qj5 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.bugyh0OM.js"),
-						import("../_app/immutable/entry/app.CU6cDemo.js")
+						import("../_app/immutable/entry/start.CcPr2wIH.js"),
+						import("../_app/immutable/entry/app.DnvmBgxm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
